books/rust-programming/src/examples/introduction/no-null-compilation-error/compile.out
$ cargo build
   Compiling no-null v0.1.0 (/home/gabor/work/rust.code-maven.com/books/rust-programming/src/examples/introduction/no-null-compilation-error)
error[E0381]: used binding `answer` is possibly-uninitialized
 --> src/main.rs:9:29
  |
4 |     let answer;
  |         ------ binding declared here but left uninitialized
...
9 |     println!("The answer is {answer}");
  |                             ^^^^^^^^ `answer` used here but it is possibly-uninitialized
  |
  = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0381`.
error: could not compile `no-null` (bin "no-null") due to 1 previous error

